--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: 'Roboto', Arial, sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #d5d4d4;
+}
+
+.container {
+  max-width: 1080px;
+  margin: 20px auto;
 }
 
 code {
