--- a/src/global.css
+++ b/src/global.css
@@ -7,37 +7,57 @@ body {
   font-family: 'Roboto', Arial, sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #d5d4d4;
+  overflow: hidden;
+  background: linear-gradient(to bottom, #007ced 1%, #cce7ff 100%);
 }
 
 .container {
   max-width: 1080px;
   margin: 20px auto;
+  height: 100vh;
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
-html, body{
+.background-with-clouds {
   width: 100%;
   height: 100%;
-  min-width: 500px;
-  min-height: 500px;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #007ced;
-	background: linear-gradient(to bottom, #007ced 1%,#cce7ff 100%);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-/* @keyframes wind{ 
-  0% {
-    background-position: 0 200px, 0 300px, 100px 250px;
+@keyframes moveBackground {
+  from {
+    left: 0;
   }
-  100% {
-    background-position: 1000px 200px, 1200px 300px, 1100px 250px;
+  to {
+    left: calc(100% - 5%);
   }
+}
 
-}*/
+.clouds {
+  width: 40%;
+  height: 70%;
+  object-fit: cover;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  z-index: -1;
+  animation: moveBackground 20s linear infinite;
+}
+
+
+
+
+.cloud1 {
+  width: 30%; 
+  position: relative;
+  top: 20px;
+  left: 0px;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+}
