--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 body {
   margin: 0;
   font-family: 'Roboto', Arial, sans-serif !important;
@@ -10,41 +10,39 @@ body {
   overflow: hidden;
   background: linear-gradient(to bottom, #007ced 1%, #cce7ff 100%);
 }
- 
+
 .container {
   max-width: 1080px;
   margin: 20px auto;
   height: 100vh;
   position: relative;
 }
- 
+
 .background-with-clouds {
   width: 100vw;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
- 
 @keyframes moveCloud {
   0% {
     transform: translateX(-100%);
   }
   100% {
-    transform: translateX(100%);
+    transform: translateX(100vw);
   }
 }
- 
+
 .cloud {
   position: absolute;
-  width: 100%;
-  height: 100px;
+  width: 8%;
   animation: moveCloud linear infinite;
-  left: 0;
+  left: -10%;
 }
 
- 
 .content {
   position: relative;
   z-index: 1;
