--- a/src/components/weather-forecast/forecast.css
+++ b/src/components/weather-forecast/forecast.css
@@ -3,6 +3,7 @@
 }
 
 .accordion-panel {
-  background-color: #f0f4f8;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 15px;
   transition: all 0.3s ease-in-out;
 }
